Added static toolbar

--- a/Prototype/home.html
+++ b/Prototype/home.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="style.css" >
+    <link rel="stylesheet"  href="home.css" >
     <title>Home</title>
 </head>
 <body>
-    
+
+    <nav class="navigationBar">
+        <ul class="subjects">
+            <li><a class="subjectLink" href="compSci.html">Computer Science </a></li>
+            <li><a class="subjectLink" href="math.html">Maths </a></li>
+            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+        </ul>
+    </nav>
+    <div class="pageContent">
+        <h1>Spartan Aid</h1>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis tincidunt felis, pharetra efficitur sem. Curabitur accumsan tellus sed ligula sagittis posuere. Sed consectetur elit vitae massa euismod consectetur. Praesent pulvinar venenatis nibh, vitae gravida orci tempor eget. Fusce tellus velit, luctus ac tellus ac, malesuada pretium sem. Phasellus posuere nisl vel lectus pharetra, eu tristique nunc egestas. Quisque luctus et magna vel iaculis. Suspendisse mollis facilisis justo, eu dapibus dolor posuere ut. Sed vel feugiat arcu. Etiam volutpat iaculis nibh, ut pulvinar tortor sodales ac. Nullam a lacus maximus, elementum elit id, mollis metus. Pellentesque laoreet, lorem vitae tempor posuere, sapien ligula semper odio, a hendrerit ipsum arcu ut lorem.
+
+Suspendisse et vehicula justo. Ut id ex mauris. Aliquam ullamcorper magna orci, a pellentesque elit venenatis at. Nam venenatis libero ut purus ultrices posuere. Sed eget enim urna. Quisque ultrices aliquet lacus vitae egestas. Maecenas in justo sit amet felis lobortis lacinia sed in odio. Quisque lacinia arcu ut eros volutpat, sit amet laoreet leo gravida. Proin non ipsum sit amet nunc convallis vestibulum. Morbi bibendum bibendum consequat. Sed non aliquet purus. Sed non lorem libero.
+
+Donec bibendum nec nibh sit amet tincidunt. Phasellus rhoncus dapibus orci, in vehicula nisi elementum ac. Suspendisse consectetur mi lectus, sed vehicula tortor consectetur sed. Maecenas nec ligula eget purus euismod semper. Integer fermentum sem a enim iaculis lacinia. Praesent semper sagittis sapien, nec mollis felis maximus nec. Pellentesque ac metus et nunc ultrices tempor suscipit vel risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec congue ex a mi luctus iaculis. Vestibulum interdum quis elit sit amet dapibus. Praesent dolor magna, tempus commodo pretium ut, semper non metus. Praesent eros turpis, auctor at lectus ut, ornare blandit nulla. Nulla facilisi. Nunc at varius sapien.
+
+Phasellus dapibus eleifend felis, a hendrerit sapien dignissim a. Aliquam ac mi sed velit tempor venenatis. Vivamus ut lorem mollis, mollis mauris in, pretium est. Etiam quis tincidunt tellus. Mauris laoreet interdum auctor. Nullam sollicitudin nec erat sed convallis. Mauris aliquet, purus nec pharetra lobortis, urna ex mollis ligula, sit amet vehicula mi mauris vel mi. Etiam fringilla pretium tempus. In condimentum mauris vel nisl fringilla eleifend. Pellentesque nec quam ut augue tempor mattis. Nunc euismod porta magna non fringilla. Proin aliquam condimentum justo et aliquet.
+
+Nulla pharetra velit vitae libero suscipit consectetur a vel ipsum. Pellentesque at mauris sit amet velit efficitur dictum. Maecenas varius ex malesuada metus lobortis eleifend. Fusce non elit ac tortor tempor blandit. Phasellus euismod velit leo, sed porttitor ex consequat quis. Aliquam fermentum vitae lorem iaculis porttitor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus hendrerit, metus sit amet fringilla scelerisque, nisi lectus pretium justo, non pretium eros nisl id mauris. Sed ac venenatis arcu. Mauris auctor ac nisi non posuere. Maecenas sit amet justo non ligula malesuada maximus nec rutrum enim.
+    </div>
+
 </body>
+
+
 </html>
