added sign up page and forgot password file

--- a/Prototype/home.html
+++ b/Prototype/home.html
@@ -11,7 +11,7 @@
         <ul class="topBar">
             <li><a class="subjectLink" href="home.html">Spartan Aid </a></li>
             <li><a class="subjectLink" href="home.html">DMs </a></li>
-            <li><a class="subjectLink" href="home.html">Logout </a></li>
+            <li><a class="subjectLink" href="Login.html">Logout </a></li>
         </ul>
 
         <ul class="subjects">
