--- a/Prototype/Login.html
+++ b/Prototype/Login.html
@@ -29,13 +29,15 @@
                     </div>
                     <!-- password -->
                     <div class="password">
-                        <label for="password">Last Password</label><br>
-                        <input type="text" id="password" name="password" placeholder="Enter the password"><br><br>
+                        <label for="password">Password</label><br>
+                        <input type="password" id="password" name="password" placeholder="Enter the password"><br><br>
                     </div>
                     <p>Forgot password?</p>
                 </div>
                 <button class="login-button">Sign in</button>
             </form>
+
+            <div class="separator">Or</div>
 
             <script src="https://accounts.google.com/gsi/client" async></script>
             <div id="g_id_onload" data-client_id="YOUR_GOOGLE_CLIENT_ID"
