added more styling to login and signup pages

--- a/Prototype/Login.html
+++ b/Prototype/Login.html
@@ -32,7 +32,7 @@
                         <label for="password">Password</label><br>
                         <input type="password" id="password" name="password" placeholder="Enter the password"><br><br>
                     </div>
-                    <p>Forgot password?</p>
+                   <p class="forgot"><a href="./forgot.html">Forgot password?</a></p>
                 </div>
                 <button class="login-button">Sign in</button>
             </form>
