Worked on home page design

--- a/Prototype/home.html
+++ b/Prototype/home.html
@@ -7,27 +7,50 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="navigationBar">
-        <ul class="topBar">
-            <li><a class="subjectLink" href="home.html">Spartan Aid </a></li>
-            <li><a class="subjectLink" href="home.html">DMs </a></li>
-            <li><a class="subjectLink" href="Login.html">Logout </a></li>
-        </ul>
-
+    <nav>
         <ul class="subjects">
-            <li><a class="subjectLink" href="compSci.html">Computer Science </a></li>
-            <li><a class="subjectLink" href="math.html">Maths </a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
-            <li><a class="subjectLink" href="psych.html"> Psych</a></li>
+            <li> <h2> Subjects</h2></li>
+            <li><a class="subjectLink" href=" #">ARS </a></li>
+            <li><a class="subjectLink" href="#">ACC </a></li>
+            <li><a class="subjectLink" href="#"> IAA</a></li>
+            <li><a class="subjectLink" href="#"> ADS</a></li>
+            <li><a class="subjectLink" href="#"> ASL</a></li>
+            <li><a class="subjectLink" href="#"> ATY</a></li>
+            <li><a class="subjectLink" href="#"> APD</a></li>
+            <li><a class="subjectLink" href="#"> ARB</a></li>
+            <li><a class="subjectLink" href="#"> ARC </a></li>
+            <li><a class="subjectLink" href="#"> ART </a></li>
+            <li><a class="subjectLink" href="#"> ARE </a></li>
+            <li><a class="subjectLink" href="#"> ARH </a></li>
+            <li><a class="subjectLink" href="#"> AAD </a></li>
+            <li><a class="subjectLink" href="#"> AST </a></li>
+            <li><a class="subjectLink" href="#"> IAB </a></li>
+            <li><a class="subjectLink" href="#"> BIO </a></li>
+            <li><a class="subjectLink" href="#"> BUS </a></li>
+            <li><a class="subjectLink" href="#"> CHE </a></li>
+            <li><a class="subjectLink" href="#"> CHI </a></li>
+            <li><a class="subjectLink" href="#"> CCI </a></li>
+            <li><a class="subjectLink" href="#"> CSD </a></li>
+            <li><a class="subjectLink" href="#"> CST </a></li>
+            <li><a class="subjectLink" href="#"> CTR </a></li>
+            <li><a class="subjectLink" href="#"> CTP </a></li>
+            <li><a class="subjectLink" href="#"> IAC </a></li>
+            <li><a class="subjectLink" href="#"> CSC </a></li>
+            <li><a class="subjectLink" href="#"> CNS </a></li>
+            <li><a class="subjectLink" href="#"> CRS </a></li>
+            <li><a class="subjectLink" href="#"> CED </a></li>
+
         </ul>
     </nav>
+    <ul class="DMs">
+        <h2>Messages</h2>
+        <li>
+            <img src="/images/blank-pf.png" alt="profile-pic">
+            <a href="#">UserName</a>
+            <p> # of new notifications</p>
+
+        </li>
+    </ul>
     <div class="pageContent">
         <h1>Spartan Aid</h1>
         <p>
